<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_gravity="center" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:attr/colorBackground"
        android:layout_gravity="start"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="15dp"
            android:src="@mipmap/ic_launcher_round"
            android:layout_gravity="center" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/app_title"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="5dp"
            android:gravity="center"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/blue" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:gravity="center_horizontal"
            android:text="@string/about_summary"
            android:textIsSelectable="true"
            android:textStyle="bold|italic"
            android:textSize="15sp" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="50sp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp" >

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/blue"
                    android:layout_margin="5dp"
                    app:cardCornerRadius="15dp"
                    android:alpha="0.75" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal" >

                        <LinearLayout
                            android:id="@+id/source_code"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:orientation="vertical"
                            android:gravity="center_horizontal"
                            android:padding="10dp" >

                            <androidx.appcompat.widget.AppCompatImageButton
                                android:layout_width="35dp"
                                android:layout_height="35dp"
                                android:background="@null"
                                android:tint="@color/black"
                                android:clickable="false"
                                android:src="@drawable/ic_github" />

                            <com.google.android.material.textview.MaterialTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:textColor="@color/black"
                                android:gravity="center_horizontal"
                                android:text="@string/source_code" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/play_store"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:orientation="vertical"
                            android:gravity="center_horizontal"
                            android:padding="10dp" >

                            <androidx.appcompat.widget.AppCompatImageButton
                                android:layout_width="35dp"
                                android:layout_height="35dp"
                                android:background="@null"
                                android:tint="@color/black"
                                android:clickable="false"
                                android:src="@drawable/ic_playstore" />

                            <com.google.android.material.textview.MaterialTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:textColor="@color/black"
                                android:gravity="center_horizontal"
                                android:text="@string/rate_us" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/report_issue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:orientation="vertical"
                            android:gravity="center_horizontal"
                            android:padding="10dp" >

                            <androidx.appcompat.widget.AppCompatImageButton
                                android:layout_width="35dp"
                                android:layout_height="35dp"
                                android:background="@null"
                                android:tint="@color/black"
                                android:clickable="false"
                                android:src="@drawable/ic_bug" />

                            <com.google.android.material.textview.MaterialTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:textColor="@color/black"
                                android:gravity="center_horizontal"
                                android:text="@string/report_issue" />
                        </LinearLayout>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/blue"
                    app:cardCornerRadius="15dp"
                    android:layout_margin="5dp"
                    android:alpha="0.75">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:gravity="center"
                        android:text="@string/about"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="17sp" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:gravity="start"
                        android:padding="16dp"
                        android:text="@string/app_description"
                        android:textColor="@color/black"
                        android:textStyle="bold|italic"
                        android:textSize="15sp" />
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/donations"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/blue"
                    android:layout_margin="5dp"
                    app:cardCornerRadius="15dp"
                    android:alpha="0.75">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:gravity="center"
                        android:text="@string/support_development"
                        android:textColor="@color/black"
                        android:clickable="false"
                        android:textStyle="bold"
                        android:textSize="17sp" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:gravity="start"
                        android:padding="16dp"
                        android:text="@string/support_development_summary"
                        android:textColor="@color/black"
                        android:textStyle="bold|italic"
                        android:clickable="false"
                        android:textSize="15sp" />
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/cancel_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_horizontal"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"
        android:text="@string/cancel"
        android:textStyle="bold"
        android:background="@color/black"
        android:textColor="@color/blue"
        android:textSize="18sp"
        android:padding="10dp" />
</RelativeLayout>