<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="top|center_vertical"
            android:background="@color/black"
            android:layout_gravity="center"
            android:padding="10dp" >

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/navigation_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center"
                android:src="@drawable/ic_navigation"
                android:background="@color/black"
                android:tint="@color/blue" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginStart="40dp"
                android:text="@string/app_name"
                android:textColor="@color/blue"
                android:layout_gravity="start"
                android:textStyle="bold"
                android:textSize="23sp" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/menu_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center"
                android:src="@drawable/ic_menu"
                android:background="@color/black"
                android:tint="@color/blue" />
        </FrameLayout>

        <WebView
            android:id="@+id/webview"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/share_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/blue"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="125dp"
        android:layout_marginEnd="25dp"
        android:layout_gravity="center"
        app:cardCornerRadius="10dp"
        android:visibility="gone" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:orientation="horizontal"
            android:gravity="center" >

            <androidx.appcompat.widget.AppCompatImageButton
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_share"
                android:background="@color/black"
                android:tint="@color/blue"
                android:clickable="false" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold|italic"
                android:textColor="@color/blue"
                android:text="@string/share"
                android:clickable="false"
                android:textSize="17sp"
                android:padding="10dp" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:gravity="center" >

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/blue"
            android:layout_gravity="start"
            app:cardCornerRadius="10dp" >

            <androidx.appcompat.widget.AppCompatImageButton
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_arrow"
                android:rotation="180"
                android:background="@color/black"
                android:tint="@color/blue"
                android:clickable="false" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/home_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/blue"
            android:layout_gravity="center"
            app:cardCornerRadius="10dp" >

            <androidx.appcompat.widget.AppCompatImageButton
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_home"
                android:background="@color/black"
                android:tint="@color/blue"
                android:clickable="false" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/forward_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/blue"
            android:layout_gravity="end"
            app:cardCornerRadius="10dp" >

            <androidx.appcompat.widget.AppCompatImageButton
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_arrow"
                android:background="@color/black"
                android:tint="@color/blue"
                android:clickable="false" />
        </com.google.android.material.card.MaterialCardView>
    </FrameLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/navigation_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="start"
        app:cardCornerRadius="5dp"
        android:visibility="gone" >

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:id="@+id/splash_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:attr/colorBackground"
        android:orientation="vertical"
        android:gravity="center" >

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:srcCompat="@mipmap/ic_launcher_round" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading"
            android:textColor="@color/blue"
            android:textStyle="bold|italic"
            android:textSize="20sp"
            android:paddingTop="10dp" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            style="?android:attr/progressBarStyleHorizontal"
            android:backgroundTint="@color/blue"
            android:padding="5dp" />
    </LinearLayout>
</RelativeLayout>